fix visibilidad sidebar movil

--- a/styles/style.css
+++ b/styles/style.css
@@ -323,6 +323,8 @@ header {
     z-index: 1000;
     overflow-y: auto;
     will-change: transform;
+    
+  filter: contrast(1.2) ;
   }
 
   #btn-login span{
@@ -649,6 +651,7 @@ section.content-section h2:first-of-type::after {
   transform: scale(1.4);
 }
 .container-img {
+  filter: contrast(1.1); 
   width: 100%;
   max-height: 240px;
   overflow: hidden;
