--- a/styles/style_anime.css
+++ b/styles/style_anime.css
@@ -736,6 +736,8 @@ width: 100%;
     padding-top: 88px;
     z-index: 1000;
     height: 100%;
+    
+  overscroll-behavior: contain;
 }
 .sidebar li {
   padding: 0;
